tests/baselines/reference/partiallyAmbientClodule.errors.txt
partiallyAmbientClodule.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== partiallyAmbientClodule.ts (1 errors) ====
    declare module foo {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function x(): any;
    }
    class foo { } // Legal, because module is ambient